[gd_scene load_steps=6 format=3 uid="uid://cca377ur8nme3"]

[ext_resource type="Theme" uid="uid://fihf40utah6i" path="res://ui/battle_prep_new/inventory_not_focused.tres" id="1_b2fil"]
[ext_resource type="Script" path="res://ui/battle_preparation/unit_detailed_info/inventory_container_slot.gd" id="2_ifhgg"]
[ext_resource type="PackedScene" uid="uid://diqrf4hmvqdtg" path="res://ui/combat/shared/unit_inventory_slot/inventory_item_icon/InventoryItemIcon.tscn" id="3_my4qm"]

[sub_resource type="Theme" id="Theme_if1ym"]
default_font_size = 24

[sub_resource type="Theme" id="Theme_61c5o"]
default_font_size = 24

[node name="InventoryContainerSlot" type="Panel"]
custom_minimum_size = Vector2(270, 36)
offset_right = 270.0
offset_bottom = 32.0
focus_mode = 2
theme = ExtResource("1_b2fil")
script = ExtResource("2_ifhgg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(270, 32)
layout_mode = 0
offset_right = 270.0
offset_bottom = 34.0
focus_mode = 2

[node name="LeftContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="InventoryItemIcon" parent="HBoxContainer/LeftContainer" instance=ExtResource("3_my4qm")]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
mouse_filter = 2

[node name="ItemNameLabel" type="Label" parent="HBoxContainer/LeftContainer"]
layout_mode = 2
theme = SubResource("Theme_if1ym")
text = "Item Name"

[node name="UsesLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme = SubResource("Theme_61c5o")
text = "30"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
